generated/checker-for-evaluation/generated/test-Integer-Overflow-df94cb2e57b2cc539f325003e7abb76d3060d55b/build_logs/2/build_error_log5.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:83:41: error: wrong number of template arguments (0, should be at least 1)
   83 | class SAGenTestChecker : public Checker<> {
      |                                         ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:512:7: note: provided for ‘template<class CHECK1, class ... CHECKs> class clang::ento::Checker’
  512 | class Checker : public CHECK1, public CHECKs..., public CheckerBase {
      |       ^~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h: In instantiation of ‘CHECKER* clang::ento::CheckerManager::registerChecker(AT&& ...) [with CHECKER = {anonymous}::SAGenTestChecker; AT = {}]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:108:36:   required from ‘static void clang::ento::CheckerRegistry::initializeManager(MGR&) [with MGR = clang::ento::CheckerManager; T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:132:15:   required from ‘void clang::ento::CheckerRegistry::addChecker(llvm::StringRef, llvm::StringRef, llvm::StringRef, bool) [with T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:109:40:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:210:14: error: ‘class {anonymous}::SAGenTestChecker’ has no member named ‘Name’
  210 |     checker->Name = CurrentCheckerName;
      |     ~~~~~~~~~^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:211:28: error: no matching function for call to ‘clang::ento::CheckerFn<void()>::CheckerFn({anonymous}::SAGenTestChecker*&, <unresolved overloaded function type>)’
  211 |     CheckerDtors.push_back(CheckerDtor(checker, destruct<CHECKER>));
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:69:3: note: candidate: ‘clang::ento::CheckerFn<RET(Ps ...)>::CheckerFn(clang::ento::CheckerBase*, clang::ento::CheckerFn<RET(Ps ...)>::Func) [with RET = void; Ps = {}; clang::ento::CheckerFn<RET(Ps ...)>::Func = void (*)(void*)]’
   69 |   CheckerFn(CheckerBase *checker, Func fn) : Fn(fn), Checker(checker) {}
      |   ^~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:69:26: note:   no known conversion for argument 1 from ‘{anonymous}::SAGenTestChecker*’ to ‘clang::ento::CheckerBase*’
   69 |   CheckerFn(CheckerBase *checker, Func fn) : Fn(fn), Checker(checker) {}
      |             ~~~~~~~~~~~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:61:7: note: candidate: ‘constexpr clang::ento::CheckerFn<void()>::CheckerFn(const clang::ento::CheckerFn<void()>&)’
   61 | class CheckerFn<RET(Ps...)> {
      |       ^~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:61:7: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:61:7: note: candidate: ‘constexpr clang::ento::CheckerFn<void()>::CheckerFn(clang::ento::CheckerFn<void()>&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:61:7: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:212:23: error: ‘_register’ is not a member of ‘{anonymous}::SAGenTestChecker’
  212 |     CHECKER::_register(checker, *this);
      |     ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:213:11: error: cannot convert ‘{anonymous}::SAGenTestChecker*’ to ‘clang::ento::CheckerManager::CheckerRef’ {aka ‘clang::ento::CheckerBase*’} in assignment
  213 |     ref = checker;
      |           ^~~~~~~
      |           |
      |           {anonymous}::SAGenTestChecker*
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
